[package]
name = "keccak-chain-sonobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-groth16 = { version = "^0.5.0" }
ark-pallas = {version="0.5.0", features=["r1cs"]}
ark-vesta = {version="0.5.0", features=["r1cs"]}
ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
ark-grumpkin = {version="0.5.0", features=["r1cs"]}
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-snark = { version = "^0.5.0", default-features = false }
ark-poly-commit = "^0.5.0"
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-std = "0.5.0"
color-eyre = "0.6.2"
num-bigint = "0.4.3"
# Note: for testing purposes we use the 'light-test' feature when importing
# Sonobe's folding-schemes, but for a real-world usage it must be used without
# this feature (but then the DeciderETH circuit is bigger and takes more time
# to compute).
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", features=["light-test"]}
folding-schemes-circom = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "experimental-frontends", optional=true}
solidity-verifiers = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "solidity-verifiers"}
serde = "1.0.198"
serde_json = "1.0.116"
tiny-keccak = { version = "2.0", features = ["keccak"] }

rand = "0.8.5"



[dev-dependencies]

[features]
default = []
experimental-frontends = ["dep:folding-schemes-circom"]
